--- a/src/App.css
+++ b/src/App.css
@@ -13,16 +13,7 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+
 
 .App-link {
   color: #61dafb;
@@ -35,4 +26,86 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* Header.css */
+.header-container {
+  background-color: #3b369a;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.header {
+  background-color: #3b369a;
+  /* background: linear-gradient(180deg, #35fff3, #00bbb0); */
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header img {
+  max-width: 100%;
+  height: auto;
+  max-height: 60px;
+}
+
+.logo-img {
+  max-width: 100%;
+  height: auto;
+}
+
+.button {
+  background: linear-gradient(180deg, #2df0e3, #409291);
+  border-radius: 50%;
+  /* padding: 16px; */
+  /* border: none; */
+  cursor: pointer;
+  transition: background 0.3s ease-in-out;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.button:hover {
+  background: linear-gradient(180deg, #2df0e3, #00bbb0);
+  /* transform: scale(1.1); */
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
+}
+/* Background image of home section */
+.background {
+  background-image: url('../public/background.png'); /* Assuming correct path */
+  background-size:cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed; /* Keep image fixed on scroll */
+  height: 100vh; /* Fill viewport height */
+  width: 100%;  /* Fill viewport width */
+  position: relative; /* Maintain positioning context */
+  /* overflow: hidden; */
+}
+/* Media queries for specific screen sizes */
+@media (max-width: 768px ) {  /* Adjust for smaller screens */
+  .background {
+     /* Optional: Use smaller image for mobile */
+     height: 140vh;
+  }
+}
+.modal-content {
+  background: linear-gradient(180deg, #6a52cc, #6042d4); /* Your desired gradient */
+  color: white;
+}
+
+
+.progress-bar {
+  background: linear-gradient(180deg, #2df0e3, #00bbb0);
+}
+.modal-header .btn-close {
+  background-color: white; /* Adjust the gray shade as desired */
 }
